# DeepDiveClothFold

./: .gitignore  .gitmodules  CLAUDE.md  README.md  install.sh  scratch_build_vis.py  setup_env.sh
calib/: piper_local.urdf  test_arm_repeatability.py  test_verify_projection.py  verify_projection.py
config/: dongle_serials.yml  pipers.yml
cosmos/: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  inference_benchmarks.md
ctrl_wm/: full_extract_clothfold.sh  run_finetune_clothfold.sh  run_replay.sh
docs/: INFRA_vepfs_centric.md  README.md  download_methods.md
enerverse-ac/: README.md  requirements.txt
giga_world_policy/: .gitignore  CLAUDE.md  Readme.md  env.sh
kai0/: pyproject.toml
lmvla/: .gitignore
lmwm/: README.md
optimize/: OPTIMIZATION_PLAN.md  README.md  TRT_30ms_PLAN.md  benchmark_pi05_inference.py  cuda_graph_wrapper.py  pi05_trt_pipeline.py  trt_smoke_test.py
piper_tools/: activate_can.sh  activate_can_v2.sh  auto_remap_can.sh  calibrate_can_mapping.py  calibrate_serial_hitl.py  export_dongle_serials.py  go_to_pose.py  setup_can_v2.sh
ros2_ws/src/piper/: CMakeLists.txt
ros2_ws/src/piper/launch/: autonomy_launch.py  dagger_launch.py  session_launch.py
ros2_ws/src/piper/scripts/: arm_master_servo_node.py  arm_reader_node.py  arm_teleop_node.py  dagger_pedal_node.py  dagger_recorder_node.py  gwp_bridge_node.py  multi_camera_node.py  policy_inference_node.py
start_scripts/: flash_master_to_follower.py  rtc_apply.sh  start_autonomy.sh  start_autonomy_from_ckpt_v1.sh  start_autonomy_temp.sh  start_autonomy_v1.sh  start_dagger.sh  (+4 more)
(+909 files in other folders)
